# grepros

./: CHANGELOG.rst  CMakeLists.txt  Doxyfile  LICENSE.md  MANIFEST.in  README.md  changelog.html  cli.html  index.html  install.html  matching.html  outputs.html  package.xml  plugins.html  requirements.txt  setup.py  usage.html
api/: ____init_____8py.html  ____init_____8py_source.html  _r_e_a_d_m_e_8md.html  a_8py.html  a_8py.js  a_8py_source.html  annotated.html  annotated_dup.js  api_8py.html  api_8py.js  api_8py_source.html  b_8py.html  b_8py.js  b_8py_source.html  class_exception.html  class_exception__inherit__graph.map  class_exception__inherit__graph.md5  classes.html  classgenerate__msgs_1_1generator-members.html  classgenerate__msgs_1_1generator.html  classgenerate__msgs_1_1generator.js  classgenerate__msgs_1_1rosapi-members.html  classgenerate__msgs_1_1rosapi.html  classgenerate__msgs_1_1rosapi.js  classgrepros_1_1api_1_1_bag-members.html  classgrepros_1_1api_1_1_bag.html  classgrepros_1_1api_1_1_bag.js  classgrepros_1_1api_1_1_bag__inherit__graph.map  classgrepros_1_1api_1_1_bag__inherit__graph.md5  classgrepros_1_1api_1_1_base_bag-members.html  classgrepros_1_1api_1_1_base_bag.html  classgrepros_1_1api_1_1_base_bag.js  classgrepros_1_1api_1_1_base_bag__inherit__graph.map  classgrepros_1_1api_1_1_base_bag__inherit__graph.md5  classgrepros_1_1api_1_1_type_meta-members.html  classgrepros_1_1api_1_1_type_meta.html  classgrepros_1_1api_1_1_type_meta.js  classgrepros_1_1common_1_1_argument_util-members.html  classgrepros_1_1common_1_1_argument_util.html  classgrepros_1_1common_1_1_argument_util.js  (+513 more)
api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  files_0.js  files_1.js  (+66 more)
css/: style.css
doc/: DETAIL.md  LIBRARY.md  doxygen.md  generate.sh  preify.py
js/: common.js
scripts/: generate_msgs.py  grep4ros  grepros
src/grepros/: __init__.py  __main__.py  api.py  common.py  inputs.py  library.py  main.py  outputs.py  ros1.py  ros2.py  rosapi.py  search.py
src/grepros/outputs/: __init__.py  base.py  csv.py  dbbase.py  html.py  html.tpl  postgres.py  sqlite.py
src/grepros/plugins/: __init__.py  embag.py  mcap.py  parquet.py  sql.py
src/grepros/plugins/auto/: __init__.py  csv.py  dbbase.py  html.py  html.tpl  postgres.py  sqlbase.py  sqlite.py
src/grepros/templates/: html.tpl
test/: test_api.py  test_bag_to_bag.py  test_bag_to_console.py  test_bag_to_csv.py  test_bag_to_html.py  test_bag_to_live.launch  test_bag_to_live.py  test_bag_to_sql.py  test_bag_to_sqlite.py  test_common.py  test_expression.py  test_library.py  test_live_to_console.launch  test_live_to_console.py  test_source_filters.launch  test_source_filters.py  testbase.py
test/data/: one.bag  one.db3  two.bag  two.db3
test/ros1/: test_bag_to_bag.py  test_bag_to_console.py  test_bag_to_csv.py  test_bag_to_html.py  test_bag_to_live.launch  test_bag_to_live.py  test_bag_to_sql.py  test_bag_to_sqlite.py  test_live_to_console.py  testbase.py
