<?xml version="1.0"?>
<package format="2">
  <name>grepros</name>
  <version>0.1.0</version>
  <description>grep for ROS bag files and live topics</description>

  <maintainer email="erki@lap.ee">Erki Suurjaak</maintainer>
  <author email="erki@lap.ee">Erki Suurjaak</author>
  <url type="website">https://github.com/suurjaak/grepros</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>genpy</depend>
  <depend>rosbag</depend>
  <depend>roslib</depend>
  <depend>rosmsg</depend>
  <depend>rospy</depend>
  <depend>python3-yaml</depend>

</package>
