<?xml version="1.0"?>
<package format="3">
  <name>grepros</name>
  <version>0.3.5</version>
  <description>grep for ROS bag files and live topics</description>

  <maintainer email="erki@lap.ee">Erki Suurjaak</maintainer>
  <author email="erki@lap.ee">Erki Suurjaak</author>
  <url type="website">https://github.com/suurjaak/grepros</url>
  <license>BSD</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <depend condition="$ROS_VERSION == 1">genpy</depend>
  <depend condition="$ROS_VERSION == 1">rosbag</depend>
  <depend condition="$ROS_VERSION == 1">roslib</depend>
  <depend condition="$ROS_VERSION == 1">rospy</depend>
  <depend>python3-yaml</depend>

  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_python</build_type>
  </export>

</package>
